src/tests/zustand-pick/syntax-errors/pick-path-array-templates.js
const { user } = useGlobalStore.pick(["order", `#${orderId}`]);
